--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,98 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingTop="0dp"
+    tools:context=".MainActivity">
 
-    <Button
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/ivFrontImage"
+        android:layout_width="330dp"
+        android:layout_height="330dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/fkdedinjebgd" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="GO"
-        android:id="@+id/btnGo"
-        android:layout_marginTop="144dp"
-        android:layout_centerHorizontal="true" />
+        android:orientation="horizontal">
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/btnHomeAction"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@color/baseclr"
+            android:text="@string/btn_home"
+            android:textAllCaps="false"
+            android:textColor="@color/complementlght" />
+
+        <Button
+            android:id="@+id/btnManagement"
+            android:layout_width="0dp"
+
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@color/baseclr"
+            android:text="@string/btn_management"
+            android:textAllCaps="false"
+            android:textColor="@color/complementlght" />
+
+        <Button
+            android:id="@+id/btnSquad"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@color/baseclr"
+            android:text="@string/btn_squad"
+            android:textAllCaps="false"
+            android:textColor="@color/complementlght" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnFixtures"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@color/baseclr"
+            android:text="@string/btn_fixtures"
+            android:textAllCaps="false"
+            android:textColor="@color/complementlght" />
+
+        <Button
+            android:id="@+id/btnStandings"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@color/baseclr"
+            android:text="@string/btn_standings"
+            android:textAllCaps="false"
+            android:textColor="@color/complementlght" />
+
+        <Button
+            android:id="@+id/btnLivescore"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@color/baseclr"
+            android:text="@string/btn_livescore"
+            android:textAllCaps="false"
+            android:textColor="@color/complementlght" />
+    </LinearLayout>
+</LinearLayout>
