--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,14 +4,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@color/screen_background"
+    android:background="@color/screen_white"
     tools:context="com.logotet.fkdedinjebgd.HomeActivity">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvPunNaziv"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/screen_font"
+        android:textColor="@color/baseclr"
         android:layout_alignParentTop="true"
         android:textSize="24dp"
         android:layout_marginBottom="10dp"/>
@@ -28,131 +28,147 @@
 
 
     <TextView
-        android:layout_width="130dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:id="@+id/tvPromptDatumOsnivanja"
         android:gravity="right"
         android:text="@string/prompt_datum_osnivanja"
         android:layout_below="@+id/ivMainPhoto"
-        android:textColor="@color/screen_font"/>
+        android:layout_marginRight="10dp"
+        android:textColor="@color/verydark"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvDatumOsnivanja"
         android:layout_below="@+id/ivMainPhoto"
         android:layout_toRightOf="@+id/tvPromptDatumOsnivanja"
-        android:textColor="@color/screen_font"/>
+        android:text="********"
+        android:textColor="@color/baseclr"/>
 
     <TextView
-        android:layout_width="130dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:id="@+id/tvPromptAdresa"
         android:text="@string/prompt_adresa"
         android:gravity="right"
+        android:layout_marginRight="10dp"
         android:layout_below="@+id/tvPromptDatumOsnivanja"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/verydark"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvAdresa"
+        android:text="********"
         android:layout_below="@+id/tvDatumOsnivanja"
         android:layout_toRightOf="@+id/tvPromptAdresa"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/baseclr"/>
     
     
     <TextView
-        android:layout_width="130dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:id="@+id/tvPromptMesto"
         android:gravity="right"
+        android:layout_marginRight="10dp"
         android:text="@string/prompt_mesto"
         android:layout_below="@+id/tvPromptAdresa"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/verydark"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvMesto"
+        android:text="********"
         android:layout_below="@+id/tvAdresa"
         android:layout_toRightOf="@+id/tvPromptMesto"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/baseclr"/>
     <TextView
-        android:layout_width="130dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:id="@+id/tvPromptEmail"
         android:gravity="right"
+        android:layout_marginRight="10dp"
         android:text="@string/prompt_email"
         android:layout_below="@+id/tvPromptMesto"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/verydark"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvEmail"
-        android:layout_below="@+id/tvAdresa"
+        android:text="********"
+        android:layout_below="@+id/tvMesto"
         android:layout_toRightOf="@+id/tvPromptEmail"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/baseclr"/>
 
     <TextView
-        android:layout_width="130dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:id="@+id/tvPromptWeb"
         android:gravity="right"
+        android:layout_marginRight="10dp"
         android:text="@string/prompt_web"
         android:layout_below="@+id/tvPromptEmail"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/verydark"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvWeb"
+        android:text="********"
         android:layout_below="@+id/tvEmail"
         android:layout_toRightOf="@+id/tvPromptWeb"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/baseclr"/>
 
 
     <TextView
-        android:layout_width="130dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:id="@+id/tvPromptPib"
         android:gravity="right"
+        android:layout_marginRight="10dp"
         android:text="@string/prompt_pib"
         android:layout_below="@+id/tvPromptWeb"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/verydark"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvPib"
-        android:layout_below="@+id/tvEmail"
+        android:layout_below="@+id/tvWeb"
+        android:text="********"
         android:layout_toRightOf="@+id/tvPromptPib"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/baseclr"/>
 
     <TextView
-        android:layout_width="130dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:id="@+id/tvPrompMatbroj"
         android:gravity="right"
+        android:layout_marginRight="10dp"
         android:text="@string/prompt_matbroj"
         android:layout_below="@+id/tvPromptPib"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/verydark"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvMatbroj"
+        android:text="********"
         android:layout_below="@+id/tvPromptPib"
         android:layout_toRightOf="@+id/tvPrompMatbroj"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/baseclr"/>
     <TextView
-        android:layout_width="130dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:id="@+id/tvPromptTekrac"
         android:gravity="right"
+        android:layout_marginRight="10dp"
         android:text="@string/prompt_tekrac"
         android:layout_below="@+id/tvPrompMatbroj"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/verydark"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvTekrac"
         android:layout_below="@+id/tvMatbroj"
+        android:text="********"
         android:layout_toRightOf="@+id/tvPrompMatbroj"
-        android:textColor="@color/screen_font"/>
+        android:textColor="@color/baseclr"/>
 
 </RelativeLayout>
