--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
 
     <color name="screen_background">#404040</color>
     <color name="screen_font">#d6d6d6</color>
+    <color name="screen_white">#e6e6e6</color>
 
     <color name="tablayout_background">#202020</color>
     <color name="tabselected">#8f8f8f</color>
