--- a/app/src/main/res/layout/activity_live_score.xml
+++ b/app/src/main/res/layout/activity_live_score.xml
@@ -4,111 +4,124 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/screen_background"
     tools:context="com.logotet.fkdedinjebgd.LiveScoreActivity">
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="5.9.2015"
         android:id="@+id/txtDatum"
+        android:textColor="@color/baselight"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentLeft="true"  />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="stadion Brodarca"
         android:id="@+id/txtStadion"
+        android:textColor="@color/baselight"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentRight="true"   />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="FK Dedinje"
-        android:gravity="left"
-        android:id="@+id/txtHomeTeam"
-        android:layout_below="@+id/txtDatum"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="OFK Crvenka"
-        android:gravity="right"
-        android:id="@+id/txtAwayTeam"
-        android:layout_alignTop="@+id/txtHomeTeam"
-        android:layout_alignRight="@+id/txtStadion"
-        android:layout_alignEnd="@+id/txtStadion" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="2:0"
+        android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
-        android:id="@+id/txtScore"
-        android:layout_alignTop="@+id/txtAwayTeam"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginTop="10dp"
+        android:textSize="32dp"
+        android:id="@+id/tvCurrentScore"
+        android:layout_below="@+id/txtDatum"
+        android:textColor="@color/complementlght"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="76'"
-        android:id="@+id/txtMinut"
-        android:layout_below="@+id/txtScore"
+        android:id="@+id/tvHomeTeamName"
+        android:layout_marginTop="10dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/txtDatum"
+        android:layout_toLeftOf="@+id/tvCurrentScore"
+        android:textColor="@color/screen_font"/>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvAwayTeamName"
+        android:gravity="right"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@+id/tvCurrentScore"
+        android:layout_below="@+id/txtStadion"
+        android:textColor="@color/screen_font"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvCurrentMinute"
+        android:layout_alignParentLeft="true"
+        android:textColor="@color/screen_font"
+        android:layout_below="@id/tvHomeTeamName"/>
+
 
     <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tok utakmice"
-        android:id="@+id/btnExpandEvents"
-        android:layout_below="@+id/txtMinut"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="24dp"
-        android:layout_alignRight="@+id/txtAwayTeam"
-        android:layout_alignEnd="@+id/txtAwayTeam" />
+        android:layout_width="fill_parent"
+        android:layout_height="18dp"
+        android:id="@+id/btnShowEvents"
+        android:layout_marginTop="10dp"
+        android:text="@string/btn_events"
+        android:textAllCaps="false"
+        android:textSize="12dp"
+        android:gravity="right"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingBottom="0dp"
+        android:paddingRight="15dp"
+        android:background="@drawable/actionbutton"
+        android:textColor="@color/screen_font"
+        android:layout_below="@id/tvCurrentMinute"/>
 
-    <ListView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lvEvents"
-        android:layout_below="@+id/btnExpandEvents"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:visibility="gone" />
+        android:id="@+id/llEvents"
+        android:orientation="vertical"
+        android:layout_below="@+id/btnShowEvents"
+        android:visibility="visible">
+        <ListView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/lvClientEvents"></ListView>
+    </LinearLayout>
 
     <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sastav"
-        android:id="@+id/btnExpandSastav"
-        android:layout_below="@+id/lvEvents"
-        android:layout_alignRight="@+id/btnExpandEvents"
-        android:layout_alignEnd="@+id/btnExpandEvents"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_width="fill_parent"
+        android:layout_height="18dp"
+        android:id="@+id/btnShowSastav"
+        android:layout_marginTop="10dp"
+        android:text="@string/btn_lineup"
+        android:textAllCaps="false"
+        android:textSize="12dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingBottom="0dp"
+        android:paddingRight="15dp"
+        android:gravity="right"
+        android:background="@drawable/actionbutton"
+        android:textColor="@color/screen_font"
+        android:layout_below="@id/llEvents" />
 
-    <ListView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lvSastav"
-        android:layout_below="@+id/btnExpandSastav"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:visibility="gone" />
+        android:id="@+id/llSastav"
+        android:orientation="vertical"
+        android:layout_below="@+id/btnShowSastav">
+        <ListView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/lvClientIgrac"></ListView>
+    </LinearLayout>
+
 </RelativeLayout>
