--- a/app/src/main/res/layout/awayevent_row.xml
+++ b/app/src/main/res/layout/awayevent_row.xml
@@ -12,20 +12,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:text="15'"
         android:textColor="@color/screen_font"
-        android:textSize="18sp" />
+        android:textSize="12sp" />
 
     <ImageView
-        android:id="@+id/tvaFirstIcon"
+        android:id="@+id/ivaSecondIcon"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/tvaEventMinut"
-        android:src="@drawable/football30x30" />
-
-
-
+        android:layout_toRightOf="@id/tvaEventMinut"   />
 
     <TextView
         android:id="@+id/tvaPlayer"
@@ -33,19 +28,17 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:text="Petar Petrovic"
         android:textColor="@color/screen_font"
-        android:textSize="18sp" />
+        android:textSize="12sp" />
 
 
     <ImageView
-        android:id="@+id/tvaSecondIcon"
+        android:id="@+id/ivaFirstIcon"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_toLeftOf="@id/tvaPlayer"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
-        android:src="@drawable/red30x30" />
+        android:layout_marginRight="10dp" />
 
     <TextView
         android:id="@+id/tvaScore"
@@ -53,12 +46,10 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
-        android:layout_toLeftOf="@id/tvaSecondIcon"
+        android:layout_toLeftOf="@id/ivaFirstIcon"
         android:gravity="clip_horizontal"
-        android:text="10:10"
         android:textColor="@color/complementlght"
-        android:textSize="20sp" />
-
+        android:textSize="12sp" />
 
 
 </RelativeLayout>
