--- a/app/src/main/res/layout/igrac_row.xml
+++ b/app/src/main/res/layout/igrac_row.xml
@@ -16,40 +16,48 @@
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textColor="@color/screen_font"
             android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true" />
+
+        <TextView
+            android:id="@+id/tvGodiste"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_marginRight="2dp"
+            android:textColor="@color/screen_font"
             android:layout_alignParentLeft="true"
-            android:text="Petar Petrovic"/>
+            android:layout_below="@+id/tvName"/>
 
         <TextView
             android:id="@+id/tvPozicija"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textColor="@color/screen_font"
+            android:layout_alignBaseline="@+id/tvGodiste"
             android:layout_below="@+id/tvName"
-            android:layout_alignParentLeft="true"
-            android:text="odbrana"/>
+            android:layout_toRightOf="@+id/tvGodiste" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvVisina"
-            android:textSize="14dp"
+            android:textSize="12sp"
             android:textColor="@color/screen_font"
             android:layout_alignParentRight="true"
-            android:text="180cm"
             android:paddingRight="20dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvTezina"
-            android:textSize="14dp"
+            android:textSize="12sp"
             android:textColor="@color/screen_font"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/tvVisina"
-            android:text="86kg"
+            android:layout_alignBaseline="@+id/tvGodiste"
             android:paddingRight="20dp"/>
     </RelativeLayout>
 
