--- a/app/src/main/res/layout/activity_squad.xml
+++ b/app/src/main/res/layout/activity_squad.xml
@@ -1,16 +1,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/screen_background"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.logotet.fkdedinjebgd.SquadActivity">
 
     <ListView
+        android:id="@+id/lvSquad"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lvSquad">
+        android:layout_above="@+id/ad3View"></ListView>
 
-    </ListView>
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/ad3View"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/admob_banner_id"></com.google.android.gms.ads.AdView>
+
 
 </RelativeLayout>
