--- a/app/src/main/res/layout/activity_standings.xml
+++ b/app/src/main/res/layout/activity_standings.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/screen_background"
@@ -31,6 +32,7 @@
         android:id="@+id/spaceline"
         android:layout_width="fill_parent"
         android:layout_height="4dp"
+
         android:layout_marginBottom="10dp"
         android:layout_below="@id/tvOdigranoKolo"
         android:background="@color/complementlght" />
@@ -40,5 +42,15 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/spaceline"></ListView>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/ad1View"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="MEDIUM_RECTANGLE"
+        ads:adUnitId="@string/admob_banner_id">
+    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
