fino podesiti slide show portreta, ubaciti production kodove za mape i admob

--- a/app/src/main/res/layout/activity_portret.xml
+++ b/app/src/main/res/layout/activity_portret.xml
@@ -1,88 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/vpPortretViewPager"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/screen_background"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.logotet.fkdedinjebgd.PortretActivity">
+    android:layout_height="match_parent" />
 
-    <ImageView
-        android:id="@+id/ivPortret"
-        android:layout_width="320dp"
-        android:layout_height="320dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp" />
-
-    <TextView
-        android:id="@+id/tvFullName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/ivPortret"
-        android:text="sfdsdfsd"
-        android:textColor="@color/screen_font"
-        android:textSize="22sp" />
-
-    <TextView
-        android:id="@+id/tvBirthYear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/ivPortret"
-        android:layout_toRightOf="@+id/tvFullName"
-        android:gravity="right"
-        android:text="sfdsdfsd"
-        android:textColor="@color/screen_font"
-        android:textSize="22sp" />
-
-    <TextView
-        android:id="@+id/tvDefaultPozicija"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/tvFullName"
-        android:text="pozicija"
-        android:textColor="@color/screen_font"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/tvHeight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvFullName"
-        android:text="190cm"
-        android:layout_alignParentRight="true"
-        android:gravity="right"
-        android:textColor="@color/screen_font"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/tvWeight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvFullName"
-
-        android:layout_toLeftOf="@+id/tvHeight"
-        android:layout_marginRight="10dp"
-
-        android:gravity="right"
-        android:text="88kg"
-        android:textColor="@color/screen_font"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/tvNapomena"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/tvDefaultPozicija"
-        android:layout_toEndOf="@+id/tvWeight"
-        android:layout_toRightOf="@+id/tvWeight"
-        android:singleLine="false"
-        android:textSize="14sp"
-        android:textColor="@color/screen_font" />
-</RelativeLayout>
