--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -12,7 +12,13 @@ https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
+
+<!--  ovo je za test iz genymotiona
     <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
         AIzaSyDKsVFDdPzCfP3wxH6X4IUz2FmOUU7jWCA
     </string>
+   -->
+
+    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyCDhOufwx5u8m6mQsDm8fmrmF8xqK44_og</string>
+
 </resources>
