--- a/app/src/main/res/layout/activity_next_match.xml
+++ b/app/src/main/res/layout/activity_next_match.xml
@@ -90,5 +90,5 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/admob_banner_id"></com.google.android.gms.ads.AdView>
+        ads:adUnitId="@string/admob_banner_onlistviews"></com.google.android.gms.ads.AdView>
 </RelativeLayout>
