--- a/app/src/main/res/layout/activity_squad.xml
+++ b/app/src/main/res/layout/activity_squad.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/admob_banner_id"></com.google.android.gms.ads.AdView>
+        ads:adUnitId="@string/admob_banner_onlistviews"></com.google.android.gms.ads.AdView>
 
 
 </RelativeLayout>
