--- a/app/src/main/res/layout/activity_standings.xml
+++ b/app/src/main/res/layout/activity_standings.xml
@@ -50,7 +50,7 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         ads:adSize="MEDIUM_RECTANGLE"
-        ads:adUnitId="@string/admob_banner_id">
+        ads:adUnitId="@string/admob_banner_onstandings">
     </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
