--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,7 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -18,9 +17,11 @@
         android:src="@drawable/fkdedinjebgd" />
 
     <LinearLayout
+        android:id="@+id/ll_navFirstLine"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_below="@+id/ivFrontImage">
 
         <Button
             android:id="@+id/btnHomeAction"
@@ -58,9 +59,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_navSecondLine"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_below="@+id/ll_navFirstLine">
 
         <Button
             android:id="@+id/btnFixtures"
@@ -95,4 +98,22 @@
             android:textAllCaps="false"
             android:textColor="@color/complementlght" />
     </LinearLayout>
-</LinearLayout>
+
+    <Switch
+        android:id="@+id/swSound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:checked="false"
+        android:text="@string/prompt_sound"
+                android:textOff="-"
+        android:textOn="+"
+        android:switchMinWidth="86dp"
+        android:thumb="@drawable/thumb"
+        android:track="@drawable/track"
+
+        />
+
+
+</RelativeLayout>
