samo jos thread za mediaplayer

--- a/app/src/main/res/layout/activity_live_score.xml
+++ b/app/src/main/res/layout/activity_live_score.xml
@@ -134,4 +134,15 @@
             android:id="@+id/lvClientIgrac"></ListView>
     </LinearLayout>
 
+    <ProgressBar
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/pbarLivescore"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:max="100"
+        android:progress="0"/>
+
 </RelativeLayout>
