--- a/app/src/main/res/layout/activity_fixtures.xml
+++ b/app/src/main/res/layout/activity_fixtures.xml
@@ -51,4 +51,16 @@
     </com.google.android.gms.ads.AdView>
 
 
+
+    <ProgressBar
+       android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/pbarFixtures"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:max="100"
+        android:progress="0"/>
+
 </RelativeLayout>
