--- a/app/src/main/res/layout/activity_standings.xml
+++ b/app/src/main/res/layout/activity_standings.xml
@@ -53,4 +53,17 @@
         ads:adUnitId="@string/admob_banner_onstandings">
     </com.google.android.gms.ads.AdView>
 
+
+
+    <ProgressBar
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/pbarStandings"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:max="100"
+        android:progress="0"/>
+
 </RelativeLayout>
